--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -40,7 +40,7 @@ services:
       POSTGRES_USER: mediacms
       POSTGRES_PASSWORD: mediacms
       POSTGRES_DB: mediacms
-      TZ: Europe/London
+      TZ: Asia/Tokyo
     healthcheck:
       test: ["CMD-SHELL", "pg_isready", "--host=db", "--dbname=$POSTGRES_DB", "--username=$POSTGRES_USER"]
       interval: 10s
