feat: Development Docker Image updated.
Development Docker Image updated.

20231026

--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -17,7 +17,7 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile-dev
-    image: mediacms/mediacms-dev:latest
+    image: ocano/streampod-vms-dev:latest
     environment:
       ADMIN_USER: 'admin'
       ADMIN_PASSWORD: 'admin'
