--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   migrations:
-    image: mediacms/mediacms:latest
+    image: ocano/streampod-vms:latest
     volumes:
       - ./:/home/mediacms.io/mediacms/
     environment:
@@ -22,7 +22,7 @@ services:
       db:
         condition: service_healthy
   web:
-    image: mediacms/mediacms:latest
+    image: ocano/streampod-vms:latest
     deploy:
       replicas: 1
     ports:
@@ -37,7 +37,7 @@ services:
     depends_on:
       - migrations
   celery_beat:
-    image: mediacms/mediacms:latest
+    image: ocano/streampod-vms:latest
     volumes:
       - ./:/home/mediacms.io/mediacms/
     environment:
@@ -49,7 +49,7 @@ services:
     depends_on:
       - redis
   celery_worker:
-    image: mediacms/mediacms:latest
+    image: ocano/streampod-vms:latest
     deploy:
       replicas: 1
     volumes:
@@ -70,7 +70,7 @@ services:
       POSTGRES_USER: mediacms
       POSTGRES_PASSWORD: mediacms
       POSTGRES_DB: mediacms
-      TZ: Europe/London
+      TZ: Asia/Tokyo
     healthcheck:
       test: ["CMD-SHELL", "pg_isready", "--host=db", "--dbname=$POSTGRES_DB", "--username=$POSTGRES_USER"]
       interval: 10s
