--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -10,12 +10,8 @@ services:
     volumes:
       - ${PWD}/streampod_volume:/var/lib/postgresql/data/
     restart: always
-    environment:
-      POSTGRES_USER: mediacms
-      PGUSER: mediacms
-      POSTGRES_PASSWORD: mediacms
-      POSTGRES_DB: mediacms
-      TZ: Asia/Tokyo
+    env_file:
+      - ${PWD}/.env
     healthcheck:
       test: ["CMD-SHELL", "pg_isready", "--host=db", "--dbname=$POSTGRES_DB", "--username=$POSTGRES_USER"]
       interval: 10s
@@ -45,7 +41,7 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile-dev
-    image: ocano/streampodvms-test:latest
+    image: ocano/streampod-vms-dev:latest
     environment:
       ADMIN_USER: 'admin'
       ADMIN_PASSWORD: 'admin'
