--- a/deploy/docker/supervisord/supervisord-celery_beat.conf
+++ b/deploy/docker/supervisord/supervisord-celery_beat.conf
@@ -10,3 +10,4 @@ directory=/home/mediacms.io/mediacms
 priority=300
 startinorder=true
 command=/home/mediacms.io/bin/celery beat --pidfile=/var/run/mediacms/beat%%n.pid --loglevel=INFO --logfile=/home/mediacms.io/mediacms/logs/celery_beat.log
+stopasgroup=true
