--- a/deploy/docker/supervisord/supervisord-celery_long.conf
+++ b/deploy/docker/supervisord/supervisord-celery_long.conf
@@ -11,3 +11,4 @@ priority=500
 startinorder=true
 startsecs=0
 command=/home/mediacms.io/bin/celery multi start long1 --pidfile=/var/run/mediacms/%%n.pid --loglevel=INFO --logfile=/home/mediacms.io/mediacms/logs/celery_long.log -Ofair --prefetch-multiplier=1 -Q long_tasks
+stopasgroup=true
