--- a/deploy/docker/supervisord/supervisord-celery_short.conf
+++ b/deploy/docker/supervisord/supervisord-celery_short.conf
@@ -10,3 +10,4 @@ directory=/home/mediacms.io/mediacms
 priority=400
 startinorder=true
 command=/home/mediacms.io/bin/celery multi start short1 short2 --pidfile=/var/run/mediacms/%%n.pid --loglevel=INFO --logfile=/home/mediacms.io/mediacms/logs/celery_short.log --soft-time-limit=300 -c10 -Q short_tasks
+stopasgroup=true
