--- a/deploy/docker/nginx_http_only.conf
+++ b/deploy/docker/nginx_http_only.conf
@@ -2,20 +2,20 @@ server {
     listen 80 ;
 
     gzip on;
-    access_log /var/log/nginx/mediacms.io.access.log;
+    access_log /var/log/nginx/streampod.io.access.log;
 
-    error_log  /var/log/nginx/mediacms.io.error.log  warn;
+    error_log  /var/log/nginx/streampod.io.error.log  warn;
 
     location /static {
-        alias /home/mediacms.io/mediacms/static ;
+        alias /home/streampod.io/streampod/static ;
     }
 
     location /media/original {
-        alias /home/mediacms.io/mediacms/media_files/original;
+        alias /home/streampod.io/streampod/media_files/original;
     }
 
     location /media {
-        alias /home/mediacms.io/mediacms/media_files ;
+        alias /home/streampod.io/streampod/media_files ;
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
