--- a/deploy/docker/supervisord/supervisord-celery_beat.conf
+++ b/deploy/docker/supervisord/supervisord-celery_beat.conf
@@ -6,8 +6,8 @@ stderr_logfile_maxbytes=0
 startsecs=0
 numprocs=1
 user=www-data
-directory=/home/mediacms.io/mediacms
+directory=/home/streampod.io/streampod
 priority=300
 startinorder=true
-command=/home/mediacms.io/bin/celery beat --pidfile=/var/run/mediacms/beat%%n.pid --loglevel=INFO --logfile=/home/mediacms.io/mediacms/logs/celery_beat.log
+command=/home/streampod.io/bin/celery beat --pidfile=/var/run/streampod/beat%%n.pid --loglevel=INFO --logfile=/home/streampod.io/streampod/logs/celery_beat.log
 stopasgroup=true
