--- a/deploy/docker/supervisord/supervisord-celery_long.conf
+++ b/deploy/docker/supervisord/supervisord-celery_long.conf
@@ -6,9 +6,9 @@ stderr_logfile_maxbytes=0
 startsecs=10
 numprocs=1
 user=www-data
-directory=/home/mediacms.io/mediacms
+directory=/home/streampod.io/streampod
 priority=500
 startinorder=true
 startsecs=0
-command=/home/mediacms.io/bin/celery multi start long1 --pidfile=/var/run/mediacms/%%n.pid --loglevel=INFO --logfile=/home/mediacms.io/mediacms/logs/celery_long.log -Ofair --prefetch-multiplier=1 -Q long_tasks
+command=/home/streampod.io/bin/celery multi start long1 --pidfile=/var/run/streampod/%%n.pid --loglevel=INFO --logfile=/home/streampod.io/streampod/logs/celery_long.log -Ofair --prefetch-multiplier=1 -Q long_tasks
 stopasgroup=true
