--- a/deploy/docker/supervisord/supervisord-celery_short.conf
+++ b/deploy/docker/supervisord/supervisord-celery_short.conf
@@ -6,8 +6,8 @@ stderr_logfile_maxbytes=0
 startsecs=0
 numprocs=1
 user=www-data
-directory=/home/mediacms.io/mediacms
+directory=/home/streampod.io/streampod
 priority=400
 startinorder=true
-command=/home/mediacms.io/bin/celery multi start short1 short2 --pidfile=/var/run/mediacms/%%n.pid --loglevel=INFO --logfile=/home/mediacms.io/mediacms/logs/celery_short.log --soft-time-limit=300 -c10 -Q short_tasks
+command=/home/streampod.io/bin/celery multi start short1 short2 --pidfile=/var/run/streampod/%%n.pid --loglevel=INFO --logfile=/home/streampod.io/streampod/logs/celery_short.log --soft-time-limit=300 -c10 -Q short_tasks
 stopasgroup=true
