--- a/deploy/docker/supervisord/supervisord-uwsgi.conf
+++ b/deploy/docker/supervisord/supervisord-uwsgi.conf
@@ -1,5 +1,5 @@
 [program:uwsgi]
-command=/home/mediacms.io/bin/uwsgi --ini /home/mediacms.io/mediacms/deploy/docker/uwsgi.ini
+command=/home/streampod.io/bin/uwsgi --ini /home/streampod.io/streampod/deploy/docker/uwsgi.ini
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
