--- a/deploy/docker/uwsgi.ini
+++ b/deploy/docker/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 
-chdir = /home/mediacms.io/mediacms/
-virtualenv = /home/mediacms.io
+chdir = /home/streampod.io/streampod/
+virtualenv = /home/streampod.io
 module = cms.wsgi
 
 uid=www-data
