--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ media_files/hls/
 media_files/chunks/
 media_files/uploads/
 postgres_data/
+streampod_volume/
+media_files/
 celerybeat-schedule
 logs/
 pids/
