--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -20,10 +20,6 @@ RUN pip install -r requirements-dev.txt
 COPY . /home/streampod.io/streampod
 WORKDIR /home/streampod.io/streampod
 
-# Install Bento4
-RUN wget -q https://www.deb-multimedia.org/pool/main/b/bento4-dmo/bento4_1.6.0.640-dmo1_arm64.deb && \
-    apt-get install -y ./bento4_1.6.0.640-dmo1_arm64.deb
-
 ############ RUNTIME IMAGE ############
 FROM python:3.11.4-bookworm as runtime-image
 
@@ -58,6 +54,10 @@ RUN wget -q https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-arm64-stati
     tar -xf ffmpeg-release-arm64-static.tar.xz --strip-components 1 -C ffmpeg-tmp && \
     cp -v ffmpeg-tmp/ffmpeg ffmpeg-tmp/ffprobe ffmpeg-tmp/qt-faststart /usr/local/bin && \
     rm -rf ffmpeg-tmp ffmpeg-release-arm64-static.tar.xz
+
+# Install Bento4
+RUN wget -q https://www.deb-multimedia.org/pool/main/b/bento4-dmo/bento4_1.6.0.640-dmo1_arm64.deb && \
+    apt-get update -y && apt-get install -y ./bento4_1.6.0.640-dmo1_arm64.deb
     
 WORKDIR /home/streampod.io/streampod
 
