--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,16 @@
 version: "3"
 
+volumes:
+  volume_name: 
+    name: streampod_volume
+
 services:
   migrations:
-    image: ocano/streampod-vms:v1.1
+    image: ocano/streampod-vms:v1.1.2
     ports:
     - 8000
     volumes:
-      - ./:/home/mediacms.io/mediacms/
+      - ./:/home/streampod.io/streampod/
     environment:
       ENABLE_UWSGI: 'no'
       ENABLE_NGINX: 'no'
@@ -24,13 +28,13 @@ services:
       db:
         condition: service_healthy
   web:
-    image: ocano/streampod-vms:v1.1
+    image: ocano/streampod-vms:v1.1.2
     deploy:
       replicas: 1
     ports:
       - "80:80"
     volumes:
-      - ./:/home/mediacms.io/mediacms/
+      - ./:/home/streampod.io/streampod/
     environment:
       ENABLE_CELERY_BEAT: 'no'
       ENABLE_CELERY_SHORT: 'no'
@@ -39,11 +43,11 @@ services:
     depends_on:
       - migrations
   celery-beat:
-    image: ocano/streampod-vms:v1.1
+    image: ocano/streampod-vms:v1.1.2
     ports:
     - 6379
     volumes:
-      - ./:/home/mediacms.io/mediacms/
+      - ./:/home/streampod.io/streampod/
     environment:
       ENABLE_UWSGI: 'no'
       ENABLE_NGINX: 'no'
@@ -53,13 +57,13 @@ services:
     depends_on:
       - redis
   celery-worker:
-    image: ocano/streampod-vms:v1.1
+    image: ocano/streampod-vms:v1.1.2
     ports:
     - 6379
     deploy:
       replicas: 1
     volumes:
-      - ./:/home/mediacms.io/mediacms/
+      - ./:/home/streampod.io/streampod/
     environment:
       ENABLE_UWSGI: 'no'
       ENABLE_NGINX: 'no'
@@ -72,13 +76,12 @@ services:
     ports: 
     - 5432
     volumes:
-      - ../postgres_data:/var/lib/postgresql/data/
+      - ${PWD}/streampod_volume:/var/lib/postgresql/data/
     restart: always
     environment:
-      POSTGRES_USER: mediacms
-      POSTGRES_PASSWORD: mediacms
-      POSTGRES_DB: mediacms
-      TZ: Asia/Tokyo
+      POSTGRES_USER: streampod
+      POSTGRES_PASSWORD: streampod
+      POSTGRES_DB: streampod
     healthcheck:
       test: ["CMD-SHELL", "pg_isready", "--host=db", "--dbname=$POSTGRES_DB", "--username=$POSTGRES_USER"]
       interval: 10s
