--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -2,13 +2,13 @@ version: "3"
 
 volumes:
   volume_name: 
-    name: streampod_volume
+    name: vms-volume-mount
 
 services:
   db:
     image: postgres:15.2-alpine
     volumes:
-      - ${PWD}/streampod_volume:/var/lib/postgresql/data/
+      - ${PWD}/vms-volume-mount:/var/lib/postgresql/data/
     restart: always
     environment:
       POSTGRES_DB: 'streampod'
