--- a/requirements.txt
+++ b/requirements.txt
@@ -21,5 +21,5 @@ django-debug-toolbar==4.1.0
 django-login-required-middleware==0.9.0
 boto3==1.34.75
 httpx==0.27.0
-faster-whisper==1.0.1
-anthropic
+faster-whisper==1.0.2
+anthropic[bedrock]
