--- a/deploy/local_install/celery_beat.service
+++ b/deploy/local_install/celery_beat.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=MediaCMS celery beat
+Description=StreamPod celery beat
 After=network.target
 
 [Service]
@@ -8,10 +8,10 @@ User=www-data
 Group=www-data
 Restart=always
 RestartSec=10
-WorkingDirectory=/home/mediacms.io/mediacms
-Environment=CELERY_BIN="/home/mediacms.io/bin/celery"
-Environment=CELERYD_PID_FILE="/home/mediacms.io/mediacms/pids/beat%n.pid"
-Environment=CELERYD_LOG_FILE="/home/mediacms.io/mediacms/logs/beat%N.log"
+WorkingDirectory=/home/streampod.io/streampod
+Environment=CELERY_BIN="/home/streampod.io/bin/celery"
+Environment=CELERYD_PID_FILE="/home/streampod.io/streampod/pids/beat%n.pid"
+Environment=CELERYD_LOG_FILE="/home/streampod.io/streampod/logs/beat%N.log"
 Environment=CELERYD_LOG_LEVEL="INFO"
 
 ExecStart=/bin/sh -c '${CELERY_BIN} -A cms beat --pidfile=${CELERYD_PID_FILE} --logfile=${CELERYD_LOG_FILE} --loglevel=${CELERYD_LOG_LEVEL}'
