--- a/deploy/local_install/celery_long.service
+++ b/deploy/local_install/celery_long.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=MediaCMS celery long queue
+Description=StreamPod celery long queue
 After=network.target
 
 [Service]
@@ -8,14 +8,14 @@ User=www-data
 Group=www-data
 Restart=always
 RestartSec=10
-WorkingDirectory=/home/mediacms.io/mediacms
+WorkingDirectory=/home/streampod.io/streampod
 Environment=CELERYD_NODES="long1"
 Environment=CELERY_QUEUE="long_tasks"
-Environment=CELERY_BIN="/home/mediacms.io/bin/celery"
+Environment=CELERY_BIN="/home/streampod.io/bin/celery"
 Environment=CELERYD_MULTI="multi"
 Environment=CELERYD_OPTS="-Ofair --prefetch-multiplier=1"
-Environment=CELERYD_PID_FILE="/home/mediacms.io/mediacms/pids/%n.pid"
-Environment=CELERYD_LOG_FILE="/home/mediacms.io/mediacms/logs/%N.log"
+Environment=CELERYD_PID_FILE="/home/streampod.io/streampod/pids/%n.pid"
+Environment=CELERYD_LOG_FILE="/home/streampod.io/streampod/logs/%N.log"
 Environment=CELERYD_LOG_LEVEL="INFO"
 
 ExecStart=/bin/sh -c '${CELERY_BIN} -A cms multi start ${CELERYD_NODES} --pidfile=${CELERYD_PID_FILE} --logfile=${CELERYD_LOG_FILE} --loglevel=${CELERYD_LOG_LEVEL} ${CELERYD_OPTS} -Q ${CELERY_QUEUE}'
