--- a/deploy/local_install/celery_short.service
+++ b/deploy/local_install/celery_short.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=MediaCMS celery short queue
+Description=StreamPod celery short queue
 After=network.target
 
 [Service]
@@ -8,11 +8,11 @@ User=www-data
 Group=www-data
 Restart=always
 RestartSec=10
-WorkingDirectory=/home/mediacms.io/mediacms
+WorkingDirectory=/home/streampod.io/streampod
 Environment=CELERYD_NODES="short1 short2"
 Environment=CELERY_QUEUE="short_tasks"
 # Absolute or relative path to the 'celery' command:
-Environment=CELERY_BIN="/home/mediacms.io/bin/celery"
+Environment=CELERY_BIN="/home/streampod.io/bin/celery"
 # App instance to use
 # comment out this line if you don't use an app
 # or fully qualified:
@@ -24,8 +24,8 @@ Environment=CELERYD_OPTS="--soft-time-limit=300 -c10"
 # - %n will be replaced with the first part of the nodename.
 # - %I will be replaced with the current child process index
 #   and is important when using the prefork pool to avoid race conditions.
-Environment=CELERYD_PID_FILE="/home/mediacms.io/mediacms/pids/%n.pid"
-Environment=CELERYD_LOG_FILE="/home/mediacms.io/mediacms/logs/%N.log"
+Environment=CELERYD_PID_FILE="/home/streampod.io/streampod/pids/%n.pid"
+Environment=CELERYD_LOG_FILE="/home/streampod.io/streampod/logs/%N.log"
 Environment=CELERYD_LOG_LEVEL="INFO"
 
 ExecStart=/bin/sh -c '${CELERY_BIN} -A cms multi start ${CELERYD_NODES} --pidfile=${CELERYD_PID_FILE} --logfile=${CELERYD_LOG_FILE} --loglevel=${CELERYD_LOG_LEVEL} ${CELERYD_OPTS} -Q ${CELERY_QUEUE}'
