--- a/deploy/local_install/mediacms.service
+++ b/deploy/local_install/mediacms.service
@@ -1,8 +1,8 @@
 [Unit]
-Description=MediaCMS uwsgi
+Description=StreamPod uwsgi
 
 [Service]
-ExecStart=/home/mediacms.io/bin/uwsgi --ini /home/mediacms.io/mediacms/deploy/local_install/uwsgi.ini
+ExecStart=/home/streampod.io/bin/uwsgi --ini /home/streampod.io/streampod/deploy/local_install/uwsgi.ini
 ExecStop=/usr/bin/killall -9 uwsgi
 RestartSec=3
 #ExecRestart=killall -9 uwsgi; sleep 5; /home/sss/bin/uwsgi --ini /home/sss/wordgames/uwsgi.ini
