--- a/deploy/local_install/uwsgi.ini
+++ b/deploy/local_install/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 
-chdir = /home/mediacms.io/mediacms/
-virtualenv = /home/mediacms.io
+chdir = /home/streampod.io/streampod/
+virtualenv = /home/streampod.io
 module = cms.wsgi
 
 uid=www-data
@@ -13,7 +13,7 @@ threads = 2
 master = true
 
 socket = 127.0.0.1:9000
-#socket = /home/mediacms.io/mediacms/deploy/uwsgi.sock
+#socket = /home/streampod.io/streampod/deploy/uwsgi.sock
 
 
 workers = 2
@@ -21,7 +21,7 @@ workers = 2
 
 vacuum = true
 
-logto = /home/mediacms.io/mediacms/logs/errorlog.txt
+logto = /home/streampod.io/streampod/logs/errorlog.txt
 
 disable-logging = true
 buffer-size=32768
