--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ Django==4.2.2
 djangorestframework==3.14.0
 django-allauth==0.54.0
 psycopg==3.1.9
-uwsgi==2.0.21
 django-redis==5.3.0
 celery==5.3.1
 drf-yasg==1.21.6
@@ -21,3 +20,5 @@ django-debug-toolbar==4.1.0
 django-login-required-middleware==0.9.0
 boto3==1.34.75
 httpx==0.27.0
+faster-whisper==1.0.2
+anthropic[bedrock]
