--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ static/debug_toolbar/
 static/mptt/
 static/rest_framework/
 static/drf-yasg
-cms/local_settings.py
+/cms/local_settings.py
 deploy/docker/local_settings.py
 ocanolog.md
 .DS_Store
